--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,59 +10,43 @@ on:
   #schedule:
   #  - cron: "0 14 * * 2"  # Once a week on Tuesday at 14:00 UTC
 
+permissions:
+  pages: write
+  id-token: write # Needed for gh-pages
+
 env:
   CARGO_TERM_COLOR: always
-  publish: chordscript-wasm/publish
+  publish: ${{ github.workspace }}/publish
   #publish: ${{ github.workspace }}/chordscript-wasm/publish
 
 jobs:
   make_site:
     runs-on: ubuntu-latest
     steps:
-      - name: Cloning main -> vm ./
-        uses: actions/checkout@v2  # From the marketplace, by GitHub
-        with:
-          ref: main
-
-      - name: Remove .gitignore    # To commit public later on
-        run: rm .gitignore
+      - name: Clone
+        env:
+          repo: https://github.com/yueleshia/chordscript
+          dir:  ${{ github.workspace }}/repo
+        run: |-
+          printf %s\\n "" "=== Fetch yueleshia/chordscript ===" >&2
+          git init "${dir}" || exit "$?"
+          git -C "${dir}" remote add origin "${repo}" || exit "$?"
+          git -C "${dir}" fetch --depth 1 origin refs/heads/main || exit "$?"
+          git -C "${dir}" switch --detach FETCH_HEAD || exit "$?"
 
       - name: Download wasm-pack
         run:  curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | bash
 
       - name: Build with rust wasm-pack
-        run:  |
-          chordscript-wasm/make.sh '${{ github.workspace }}/${{ env.publish }}'
-          rm '${{ env.publish }}/.gitignore'
-
-      # In repository settings, place public key in "Deploy Keys", place private key in "Secrets"
-      # $ ssh-keygen -t ed25519 -C "your_email@example.com"
-      #
-      # https://serverfault.com/questions/856194/
-      # https://www.webfactory.de/blog/use-ssh-key-for-private-repositories-in-github-actions
-      # https://docs.github.com/en/free-pro-team@latest/github/authenticating-to-github/githubs-ssh-key-fingerprints
-      - name: Verify then add GitHub SSH key
-        run: |
-          [ "$( ssh-keyscan -t rsa github.com | tee github-key-temp | ssh-keygen -lf - 2>/dev/null )" \
-          = "2048 SHA256:nThbg6kXUpJWGl7E1IGOCspRomTxdCARLviKw6E5SY8 github.com (RSA)" ] \
-          || { printf "Invalid GitHub SSH key" >&2; exit 1; }
-          mkdir ~/.ssh
-          cat github-key-temp >>~/.ssh/known_hosts
-          eval "$( ssh-agent -s )"
-          <<EOF ssh-add -
-          ${{ secrets.GH_PAGES_DEPLOY_SECRET }}
-          EOF
-
-      - name: Push to gh_pages branch
         env:
-          SSH_AUTH_SOCKET: /tmp/ssh_agent.sock
-        run: |
-          git add '${{ env.publish }}'
-          git config user.email "bot@users.noreply.github.com"
-          git config user.name "Continuous Integration and Deployment"
-          git commit -m 'publishing "${{ env.publish }}"'
-          git subtree split --prefix '${{ env.publish }}' --branch gh-pages
-          git checkout gh-pages
-          git status
-          git remote -v
-          git push --force origin gh-pages
+          dir: "${{ github.workspace }}/repo"
+        run:  |
+          "${dir}/chordscript-wasm/make.sh" "${publish}"
+
+      - name: Upload static files as artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: "${{ env.publish }}"
+
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
